# qfin-agent

./: .env.example  README.md  main.py  pyproject.toml
notebooks/: demo.ipynb
src/qfin_agent/: __init__.py  cli.py  config.py
src/qfin_agent/agents/: __init__.py  fundamental.py  risk_manager.py  technical.py
src/qfin_agent/backtest/: __init__.py  backtester.py  supervisor_engine.py  walk_forward.py
src/qfin_agent/data/: __init__.py  market_data.py
src/qfin_agent/models/: __init__.py  schemas.py
src/qfin_agent/rag/: __init__.py  embeddings.py  ingest.py  retriever.py
src/qfin_agent/supervisor/: __init__.py  supervisor.py
tests/: test_backtester.py  test_fundamental_agent.py  test_risk_manager.py  test_supervisor.py  test_technical_agent.py  test_walk_forward.py
